# xmpp

./: _oasis  _tags  erm_xmpp.opam  setup.ml
src/: META  punycode.ml  roster.ml  sasl.ml  xmpp_UTF8.ml
tests/: lwt_test.ml
